--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
       background: var(--accent-color); color: white; display: flex; align-items: center; justify-content: space-between; padding: 1.5rem;
     }
     .header-title { display: flex; align-items: center; gap: 1rem; }
-    .header img { width: 150px; height: auto; border-radius: 8px; background: white; padding: 5px; }
+    .header img { 
+      width: 60px; 
+      height: 60px;
+      border-radius: 50%;
+      background: white; 
+      padding: 5px; 
+      object-fit: contain;
+    }
     .header-actions { display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: flex-end; }
     .header-actions button {
       background: rgba(255,255,255,0.2); border: none; color: white; width: 40px; height: 40px; border-radius: 50%;
@@ -98,7 +105,8 @@
       <div class="card">
         <header class="header">
           <div class="header-title">
-            <img src="image.png" alt="Logo Roseanne Dore Laboratórios">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAdRZj6UwfwUFfvlmCfFUDzQMDJz7YZioF_de0F8SLA5yHB8dxPEFCCUgEDGW4ERl8-fI&usqp=CAU" alt="Logo Roseanne Dore Laboratórios">
+            <h1>Registro de Falhas</h1>
           </div>
           <div class="header-actions">
             <button id="aiReportBtn" title="Relatório IA"><i class="fas fa-robot"></i></button>
