--- a/index.html
+++ b/index.html
@@ -143,10 +143,12 @@
         display: flex;
         flex-direction: column;
     }
-    .notice-card:hover {
-        transform: translateY(-5px) scale(1.02);
-        box-shadow: 0 12px 20px rgba(0,0,0,0.08);
+    .sidebar .notice-card:hover {
+        transform: scale(1.05);
+        box-shadow: 0 12px 20px rgba(0,0,0,0.1);
         border-color: var(--accent-color);
+        z-index: 100;
+        position: relative;
     }
     .notice-card-content {
         padding: 1.5rem;
@@ -181,16 +183,16 @@
     .calendar-header { text-align: center; font-weight: 700; margin-bottom: 0.75rem; font-size: 1.1rem; }
     .calendar-grid { display: grid; grid-template-columns: repeat(7, 1fr); gap: 5px; text-align: center; }
     .calendar-grid .weekday { font-size: 0.8rem; font-weight: 700; color: var(--text-muted); }
-    .calendar-grid .day { padding: 6px; border-radius: 50%; font-size: 0.9rem; line-height: 1.5; cursor: default; }
+    .calendar-grid .day { padding: 6px; border-radius: 50%; font-size: 0.9rem; line-height: 1.5; cursor: default; position: relative; }
     .calendar-grid .day.event { cursor: pointer; transition: transform 0.2s; }
-    .calendar-grid .day.event:hover { transform: scale(1.2); }
+    .calendar-grid .day.event:hover { transform: scale(1.2); z-index: 11; }
     .calendar-grid .day.event-lanche { background-color: var(--accent-color); color: #0a192f; font-weight: 700; }
     .calendar-grid .day.event-interior { background-color: var(--success-color); color: white; font-weight: 700; }
     .calendar-grid .day.event-coleta { background-color: var(--coleta-color); color: white; font-weight: 700; }
     .calendar-legend { margin-top: 1rem; font-size: 0.85rem; }
     .calendar-legend div { display: flex; align-items: center; margin-bottom: 0.35rem; }
     .calendar-legend .color-box { width: 15px; height: 15px; margin-right: 8px; border-radius: 4px; }
-    #calendar-tooltip {
+    .calendar-tooltip {
         position: absolute;
         display: none;
         background-color: var(--card-bg-dark);
@@ -199,7 +201,7 @@
         padding: 0.75rem;
         border-radius: 8px;
         box-shadow: var(--shadow);
-        z-index: 10;
+        z-index: 1000;
         pointer-events: none;
         font-size: 0.9rem;
         max-width: 200px;
@@ -290,7 +292,7 @@
   </style>
 </head>
 <body>
-  <div id="calendar-tooltip"></div>
+  <div id="calendar-tooltip" class="calendar-tooltip"></div>
   <div class="app-layout">
     <aside class="sidebar sidebar-left">
         <div class="notice-card">
@@ -368,7 +370,6 @@
                               <span class="day">27</span><span class="day event event-coleta">28</span><span class="day event event-coleta">29</span><span class="day">30</span><span class="day">31</span>
                             </div>
                           </div>
-                          <div class="calendar-info-display">Passe o rato sobre uma data para ver os detalhes.</div>
                           <div class="calendar-legend">
                             <div><span class="color-box" style="background-color: var(--accent-color);"></span> Lanches e Mat. Expediente</div>
                             <div><span class="color-box" style="background-color: var(--success-color);"></span> Pedido Unidades Interior</div>
@@ -597,6 +598,7 @@
           app.setupCalendars();
         },
         startRotatingMessages: () => {
+            clearInterval(messageIntervalId);
             const messages = [
                 "Materiais precisam ser separado antecipadamente, se organize com o cronograma.",
                 "Cada material tem custo. Cada requisição deve ter propósito.",
@@ -609,19 +611,17 @@
                 "Mais que pedir, é preciso justificar e planejar."
             ];
             let messageIndex = 0;
-            
-            const updateMessage = () => {
-                messageIndex = (messageIndex + 1) % messages.length;
-                dom.rotatingMessages.forEach(el => {
-                    el.style.opacity = 0;
-                    setTimeout(() => {
-                        el.textContent = `"${messages[messageIndex]}"`;
-                        el.style.opacity = 1;
-                    }, 500);
-                });
-            };
-
             if (dom.rotatingMessages.length > 0) {
+                const updateMessage = () => {
+                    messageIndex = (messageIndex + 1) % messages.length;
+                    dom.rotatingMessages.forEach(el => {
+                        el.style.opacity = 0;
+                        setTimeout(() => {
+                            el.textContent = `"${messages[messageIndex]}"`;
+                            el.style.opacity = 1;
+                        }, 500);
+                    });
+                };
                 dom.rotatingMessages.forEach(el => el.textContent = `"${messages[0]}"`);
                 messageIntervalId = setInterval(updateMessage, 5000);
             }
@@ -647,8 +647,8 @@
                     const tooltip = dom.calendarTooltip;
                     tooltip.textContent = description;
                     tooltip.style.display = 'block';
-                    tooltip.style.left = `${rect.left + rect.width / 2 - tooltip.offsetWidth / 2}px`;
-                    tooltip.style.top = `${rect.top - tooltip.offsetHeight - 10}px`;
+                    tooltip.style.left = `${rect.left - tooltip.offsetWidth - 10}px`;
+                    tooltip.style.top = `${rect.top + rect.height / 2 - tooltip.offsetHeight / 2}px`;
                     setTimeout(() => {
                         tooltip.style.opacity = 1;
                         tooltip.style.transform = 'translateY(0)';
