--- a/index.html
+++ b/index.html
@@ -628,9 +628,9 @@
         },
         setupCalendars: () => {
             const eventDescriptions = {
-              'event-lanche': 'Dias 07, 08 e 09: Requisitar Lanche e Expediente.',
-              'event-interior': 'Dias 21 e 22: Interior Todos os Grupos.',
-              'event-coleta': 'Dias 28 e 29: Coleta e Lanche.'
+              'event-lanche': 'Dias 07, 08 e 09: Grande João Pessoa: Lanche, Copa e Limpeza',
+              'event-interior': 'Dias 21 e 22: Interior: Todos os Grupos.',
+              'event-coleta': 'Dias 28 e 29: Grande João Pessoa: Coleta e Lanche.'
             };
             
             dom.calendarGrids.forEach(grid => {
